# claude-wavs-tests

./: README.md
brewery-finder/: Cargo.toml  Makefile  plan.md
brewery-finder/src/: lib.rs  trigger.rs
brewery-locator/: Cargo.toml  Makefile  plan.md
brewery-locator/src/: lib.rs  trigger.rs
brewery-lookup/: Cargo.toml  Makefile  config.json  plan.md
brewery-lookup/src/: lib.rs  trigger.rs
openai-chat/: Cargo.toml  config.json  plan.md
openai-chat-2/: Cargo.toml  plan.md
openai-chat-2/src/: lib.rs
openai-chat-3/: Cargo.toml  plan.md
openai-chat-3/src/: lib.rs  trigger.rs
openai-chat-oracle/: Cargo.toml  plan.md
openai-chat-oracle/src/: lib.rs  trigger.rs
openai-chat/src/: lib.rs  trigger.rs
openai-prompt-processor/: Cargo.toml  Makefile  config.json  plan.md
openai-prompt-processor/src/: lib.rs  trigger.rs
square-number/: Cargo.toml  Makefile
square-number/src/: lib.rs  trigger.rs
usdt-balance-checker/: Cargo.toml  plan.md
usdt-balance-checker copy/: Cargo.toml  Makefile  plan.md
usdt-balance-checker copy/src/: bindings.rs  lib.rs
usdt-balance-checker-2/: Cargo.toml  plan.md
usdt-balance-checker-2/src/: lib.rs  trigger.rs
usdt-balance-checker-contract/: Cargo.toml  plan.md
usdt-balance-checker-contract/src/: lib.rs  trigger.rs
usdt-balance-checker/src/: lib.rs  trigger.rs
